<resources>
    <string name="string_login_sinhvien_success">sinhvien_success</string>
    <string name="string_login_giangvien_success">giangvien_success</string>
    <string name="app_name">"I'm student"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_title_tab_lich">Lịch</string>
    <string name="string_title_tab_diem">Điểm</string>
    <string name="string_title_tab_khac">Khác</string>
    <string name="string_tvHelloTextView">Xin chào! Hôm nay là</string>
    <string name="string_tvWeek">Tuần:</string>
    <string name="string_hoctap_thoigianSang">07:00 - 11:45</string>
    <string name="string_hoctap_thoigianChieu">12:45 - 17:30</string>
    <string name="string_Hoc">Học</string>
    <string name="string_Nghi">Nghỉ</string>
    <string name="string_hoctap_trangthai_active">Active</string>
    <string name="string_hoctap_trangthai_deactive">Deactive</string>
    <string name="string_Monday">thứ Hai</string>
    <string name="string_Tuesday">thứ Ba</string>
    <string name="string_Wednesday">thứ Tư</string>
    <string name="string_Thursday">thứ Năm</string>
    <string name="string_Friday">thứ Sáu</string>
    <string name="string_Saturday">thứ Bảy</string>
    <string name="string_Sunday">Chủ Nhật</string>
    <string name="string_January">tháng Một</string>
    <string name="string_February">tháng Hai</string>
    <string name="string_March">tháng Ba</string>
    <string name="string_April">tháng Tư</string>
    <string name="string_May">tháng Năm</string>
    <string name="string_June">tháng Sáu</string>
    <string name="string_July">tháng Bảy</string>
    <string name="string_August">tháng Tám</string>
    <string name="string_September">tháng Chín</string>
    <string name="string_October">tháng Mười</string>
    <string name="string_November">tháng Mười một</string>
    <string name="string_December">tháng Mười hai</string>
    <string name="string_SoTinChiDaHoc">Số tín chỉ đã học:</string>
    <string name="string_DiemTrungBinhHocTap">Điểm trung bình học tập:</string>
    <string name="string_DiemTrungBinhQuaCaoNhat">Điểm trung bình tích lũy:</string>
    <string name="string_DiemTrungBinhQuaLanMot">Điểm trung bình theo học kì:</string>
    <string name="string_LichHoc_btnOK">Chọn</string>
    <string name="string_LichHoc_btnCancel">Hủy</string>
    <string name="string_LichHoc_DatePicker_Title">Chọn ngày</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="utt_name">Uông Thanh Tùng</string>
    <string name="text_view_profile">Xem thông tin cá nhân</string>
    <string name="others_textview_options">Lựa chọn</string>
    <string name="others_textview_options_Diem">Kết quả học tập</string>
    <string name="others_textview_options_CTDT">Chương trình đào tạo</string>
    <string name="others_textview_options_DSMCTDK">Danh sách môn có thể đăng kí</string>
    <string name="others_textview_options_Sotay">Sổ tay thông tin</string>
    <string name="others_textview_options_Notes">Ghi chú cá nhân</string>
    <string name="others_textview_options_ChangePwd">Đổi mật khẩu</string>
    <string name="others_textview_options_Logout">Đăng xuất</string>
    <string name="logout_confirm">Đăng xuất ngay?</string>
    <string name="title_activity_for_selector_Lich">Lịch học tập</string>
    <string name="title_activity_for_selector_NF">Bảng tin</string>
    <string name="title_activity_for_selector_General">Tổng quan</string>
    <string name="title_activity_for_selector_Diem">Điểm số</string>
    <string name="title_activity_for_selector_DiemPhanTich">Phân tích</string>
    <string name="title_activity_for_selector_DiemDuTinh">Dự tính</string>
    <string name="title_activity_diem_hoc_tap">Kết quả học tập</string>
    <string name="text_test">        “Samsung Future Developer” là chương trình đào tạo nhằm cung cấp cho sinh viên các kiến thức, kĩ năng thiết yếu để làm quen với bài thi lập trình đó và trở thành một Developer tài năng theo chuẩn toàn cầu của Tập đoàn Samsung Electronics.
Từ năm 2016, để trở thành lập trình viên của tập đoàn Samsung, tất cả các ứng viên sẽ phải vượt qua một bài kiểm tra kĩ năng lập trình được biên soạn bởi các chuyên gia hàng đầu của Tập đoàn Samsung trên toàn thế giới.
“Samsung Future Developer” là chương trình đào tạo nhằm cung cấp cho sinh viên các kiến thức, kĩ năng thiết yếu để làm quen với bài thi lập trình đó và trở thành một Developer tài năng theo chuẩn toàn cầu của Tập đoàn Samsung Electronics.
Thông tin khóa học
Đối tượng:
Ưu tiên Sinh viên các chuyên ngành kỹ thuật và có kỹ năng lập trình (các ngành như Công nghệ thông tin, Điện tử viễn thông, Khoa học máy tính, Toán tin Ứng dụng, Cơ điện tử,…) năm cuối hoặc đã/ sẽ tốt nghiệp trong năm 2016; đam mê lập trình và có mong muốn được làm việc tại SVMS sau khi tốt nghiệp ra trường.
Chương trình đào tạo:
Ngày
Thời lượng
Chủ đề và hoạt động
Các kỹ năng
1
 
 
 
 
 
 
2
4 giờ
Introduction and Team building Programming language overview
1.     Requirement Analysis (Phân tích yêu cầu)
4 giờ
Basic of algorithm and approaches
2.     Algorithm design (Thiết kế thuật toán
4 giờ
Data Structure and Algorithm I
3.     Algorithm implementation (Triển khai thuật toán)
4 giờ
Data Structure and Alogorithm II Class closing
4.     Solution optimization (Tối ưu thuật toán)
Thời gian học:
Khóa học sẽ kéo dài trong 04 buổi (04 giờ/buổi) các ngày thứ 7 hàng tuần, bắt đầu từ 27/02/2016
Địa điểm học:
Tại Hà Nội (sẽ thông báo sau)
Học phí: Hoàn toàn miễn phí!
Số lượng:~ 40 sinh viên/ lớp
Giảng viên: 
Các chuyên gia hàng đầu từ Trung tâm Nghiên cứu và Phát triền Điện thoại Di động Samsung Việt Nam (SVMC)
Cách thức đăng ký
Các bạn sinh viên truy cập địa chỉ website, facebook của Nhà trường, của Viện/ khoa để tham khảo thông tin và đăng ký chương trình SFD,  đăng ký trực tiếp tại: http://goo.gl/forms/YWYnrQR9M8
Liên hệ
Thông tin chi tiết về chương trình, nội dung, cách thức đăng kí hoặc bất kì câu hỏi, thắc mắc nào về khóa học “Samsung Future Developer” vui lòng liên hệ:
Địa chỉ
Trung tâm nghiên cứu and Phát triển  ĐTDĐ Samsung Việt Nam
Tòa nhà PVI, Số 01 Phạm Văn Bạch, Cầu Giấy, Hà Nội
Tel: +08-4-6263 5200 Fax:  +84-241-369 6003</string>
    <string name="title_activity_bai_viet_detail">Chi tiết bài viết</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_tvEmail">Email</string>
    <string name="login_tvPassword">Password</string>
    <string name="doiMatKhau_PwdHienTai">Mật khẩu hiện tại</string>
    <string name="doiMatKhau_PwdMoi">Mật khẩu mới</string>
    <string name="doiMatKhau_PwdMoiReType">Xác nhận mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_ForgotPwd">Quên mật khẩu?</string>
    <string name="acc1_email">abc@gmail.com</string>
    <string name="acc1_pwd">123</string>
    <string name="splashScreen_text">Xin chờ 1 lát!</string>
    <string name="Ki_1">Kì I</string>
    <string name="Ki_2">Kì II</string>
    <string name="Ki_3">Kì III</string>
    <string name="Ki_4">Kì IV</string>
    <string name="Ki_5">Kì V</string>
    <string name="Ki_6">Kì VI</string>
    <string name="Ki_7">Kì VII</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_danh_sach_mon_co_the_dang_ki">Danh sách môn học</string>
    <string name="rbtnNamHoc_string">Năm học</string>
    <string name="rbtnMonHoc_string">Môn học tối ưu</string>
    <string name="internet_error">Lỗi kết nối, vui lòng tải mới dữ liệu sau!</string>
    <string name="boxThongBao">Nhập thông báo..</string>
    <string name="btn_select_svtb_all">Chọn tất cả</string>
    <string name="btn_select_svtb_all_lop">Chọn cả lớp</string>
    <string name="btn_deselect_svtb_all">Bỏ chọn</string>
    <string name="string_xong">Xong</string>
    <string name="string_moi_chon_sv">- Chọn sinh viên</string>
    <string name="string_success">success</string>
    <string name="string_dang_thong_bao_moi">Tạo thông báo mới?</string>
    <string name="string_tieu_de">Tiêu đề:</string>
    <string name="string_noi_dung">Nội dung:</string>
    <string name="string_sinhvien_duoc_chon_tu">sinh viên được chọn từ</string>
    <string name="string_lop">lớp</string>
    <string name="string_chua_sv_nao_dc_chon">Chưa chọn sinh viên</string>
    <string name="string_chuahoc">Chưa học</string>
    <string name="string_yeu">Yếu</string>
    <string name="string_trungbinh">Trung bình</string>
    <string name="string_kha">Khá</string>
    <string name="string_gioi">Giỏi</string>
    <string name="string_chitietKiNangTitle1">Kĩ năng</string>
    <string name="string_chitietKiNangTitle2">của bạn so sánh với điểm số trung bình các sinh viên khác</string>
    <string name="string_goiY1">bạn có vẻ mạnh về các môn</string>
    <string name="string_doimatkhau">Đổi</string>
    <string name="string_huydoimatkhau">Hủy</string>
    <string name="string_matkhaumoitrung">Mật khẩu mới trùng mật khẩu cũ</string>
    <string name="string_xacnhanmatkhaukhongdung">Xác nhận mật khẩu không đúng</string>
    <string name="string_doi_mat_khau_that_bai">false_compare</string>
    <string name="string_doi_mat_khau_thanh_cong">success</string>
    <string name="string_tv_doi_mat_khau_thanh_cong">Đổi mật khẩu thành công!</string>
    <string name="string_tv_doi_mat_khau_that_bai">Đổi mật khẩu không thành công, mời thử lại!</string>
    <string name="string_cbVisible">Hiển thị mật khẩu</string>
    <string name="titleTimeDialog">Đặt thời gian</string>
    <string name="thongtin_canhan">THÔNG TIN CÁ NHÂN</string>
    <string name="tv_hoten">Họ tên:</string>
    <string name="tv_ngaysinh">Ngày sinh:</string>
    <string name="tv_gioitinh">Giới tính:</string>
    <string name="tv_diachi">Địa chỉ:</string>
    <string name="tv_email">Email:</string>
    <string name="tv_lop">Lớp:</string>
    <string name="tv_sdt">SĐT:</string>
    <string name="tv_themghichu">Thêm ghi chú</string>
    <string name="tv_suaghichu">Sửa ghi chú</string>
    <string name="btn_them">Thêm</string>
    <string name="btn_sua">Sửa</string>
    <string name="btn_thoat">Thoát</string>
    <string name="btn_xoa">Xóa</string>
    <string name="tv_sotinchihienco">Số tín chỉ tích lũy hiện có :</string>
    <string name="tv_diemtbdatduoc">Điểm trung bình đã đạt được :</string>
    <string name="tv_sotinchitichluy">Số tín chỉ tích lũy :</string>
    <string name="tv_diemtbmongmuon">Số điểm mong muốn :</string>
    <string name="tv_diemtbcandatduoc">Số điểm trung bình cần đạt được :</string>
    <string name="tv_dieukien">Điểu kiện :</string>
    <string name="tv_lamchuyende">Làm chuyên đề : 6.5 </string>
    <string name="tv_lamdoan">Làm đồ án và bằng loại khá : 7.0 </string>
    <string name="tv_banggioi">Bằng loại giỏi* : 8.0 </string>
    <string name="tv_bangxuatsac">Bằng loại xuất sắc* : 9.0 </string>
    <string name="tv_chuthichbang">* : Với loại giỏi và xuất sắc sẽ bị trừ 1 bậc nếu số tín chỉ học lại >= 5% tổng số tín chỉ(140)</string>
    <string name="tv5_tbKetquafalse">Không thể đạt điểm này, bạn nên tăng số tín chỉ hoặc học cải thiện</string>
    <string name="tv5_tbKetquasusses">Số điểm trung bình cần đạt được :</string>
    <string name="title_activity_ghi_chu">Ghi chú cá nhân</string>
    <string name="title_activity_nhac_lich">NhacLichActivity</string>
    <string name="title_activity_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="api_LichHocTheoMaSV">[{"thu":"3","buoi":"1","tentrangthai":"Hoc","tenphonghoc":"Phong 32"},{"thu":"3","buoi":"2","tentrangthai":"Nghi","tenphonghoc":"Phong 51"}]</string>
    <string name="api_LichThitheoMaSV">[{"thu":"2","buoi":"1","tenphonghoc":"Phong 21"},{"thu":"3","buoi":"2","tenphonghoc":"Phong 32"}]</string>
</resources>