<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:text="@string/logout_confirm"
        android:layout_margin="@dimen/LoginScreenMargin"
        android:padding="@dimen/LoginScreenMargin"
        android:textSize="@dimen/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_marginTop="@dimen/LoginScreenMargin"
	    android:background="@color/ColorPrimary"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="2" >
	    <Button 
	        android:id="@+id/btnOKDialogLogout"
	        android:background="@color/ColorPrimary"
	        android:textColor="@color/white"
	        android:textSize="@dimen/text_title"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/string_LichHoc_btnOK"/>
	    <Button 
	        android:id="@+id/btnCancelDialogLogout"
	        android:background="@color/ColorPrimary"
	        android:textColor="@color/white"
	        android:textSize="@dimen/text_title"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/string_LichHoc_btnCancel"/>
	</LinearLayout>
</LinearLayout>
