<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ActionBarColor"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    tools:context="com.doan.lichhoctap.ThongTinCaNhanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvThongtincanha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/thongtin_canhan"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <!-- Ho ten -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_hoten"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvTennguoidung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nguyễn Quốc Việt"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <!-- Ngay sinh  va Gioi tinh -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
    <!-- Ngay sinh -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_ngaysinh"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvNgaysinhnguoidung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19/05/1994"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Gioi tinh -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_gioitinh"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvGioitinhnguoidung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>



    <!-- Dia chi -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_diachi"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvDiachinguoidung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thanh Trì - Hoàng Mai - Hà Nội"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <!-- Email -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_email"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvEmailnguoidung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vietkop94@gmail.com"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <!-- Lop -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_lop"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvLopnguoidung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1210A01"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
