<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.doan.lichhoctap.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="10" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/LoginScreenMargin"
            android:background="@drawable/i_m_student_text"
            android:scaleType="fitXY" />

        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/LoginScreenMargin"
            android:layout_marginRight="@dimen/LoginScreenMargin"
            android:layout_marginTop="@dimen/LoginScreenMargin"
            android:hint="@string/login_tvEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/soft_grey"
            android:textSize="@dimen/text_title" />

        <EditText
            android:id="@+id/edtLoginPwd"
            android:password="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/LoginScreenMargin"
            android:layout_marginRight="@dimen/LoginScreenMargin"
            android:layout_marginTop="@dimen/text_margin"
            android:hint="@string/login_tvPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/soft_grey"
            android:textSize="@dimen/text_title" />

        <CheckBox
            android:id="@+id/cbPwdVisibleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/LoginScreenMargin"
            android:layout_marginRight="@dimen/LoginScreenMargin"
            android:textColor="@color/white"
            android:text="@string/string_cbVisible" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/LoginScreenMargin"
            android:layout_marginRight="@dimen/LoginScreenMargin"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@color/ColorPrimary_soft"
            android:enabled="false"
            android:text="@string/btn_login"
            android:textColor="@color/soft_grey" />

        <TextView
            android:id="@+id/btnForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/LoginScreenMargin"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:text="@string/btn_ForgotPwd"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>